[package]
name = "garage-controller"
version = "0.1.0"
authors = ["abezecny"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-async-client = "0.1.5"
tokio = "0.2.22"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
rppal = "0.11.3"