[package]
name = "garage-controller"
version = "0.1.0"
authors = ["abezecny"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-async-client = "0.1.5"
tokio = "0.2.22"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
rust-crypto = "0.2.36"
rand = "0.7"
hex = "0.4.2"
toml = "0.4"
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
rppal = "0.11.3"

[dev-dependencies]
